走失協尋 bug修正

--- a/src/main/resources/templates/animal_missing.html
+++ b/src/main/resources/templates/animal_missing.html
@@ -144,7 +144,7 @@
         <!-- 顯示資料內容 -->
         <div class="row ftco-animate">
             <div class="col-12 p-3">
-                <div class="row" id="test1Result">
+                <div class="row" id="contentAjax">
                 </div>
             </div>
         </div>
