增加協尋名字欄位

--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -190,6 +190,11 @@
                     </div>
                     <div class="col-md-12">
                         <div class="form-group">
+                            <input id="missingName" type="text" class="form-control" placeholder="名字">
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="form-group">
                             <input id="missingColor" type="text" class="form-control" placeholder="顏色">
                         </div>
                     </div>
