--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,19 +21,19 @@
 <style>
     /*按鈕樣式*/
     .btn.btn-primary {
-        color: #000 !important;
+        color: black !important;
         padding: 6px 20px;
         font-size: 1rem;
         letter-spacing: 1px;
         border: transparent !important;
         background: #fcd601 !important;
-        border-radius: 20px;
         opacity: 1;
+        border-radius: 20px;
     }
 
     /*按鈕樣式-滑鼠掠過*/
     .btn.btn-primary:hover {
-        color: #fff !important;
+        color: white !important;
         background: #ffa500 !important;
         opacity: 1;
     }
