--- a/src/main/resources/templates/login_register.html
+++ b/src/main/resources/templates/login_register.html
@@ -18,64 +18,29 @@
     <link rel="stylesheet" href="css/_custom.css">
     <!--  自訂樣式  -->
     <style>
-        /*橫幅圖片*/
-        .banner-img {
-            background-image: url('/images/_banner1.jpg');
-            height: 300px !important;
-        }
-
-        /*橫幅文字陰影*/
-        .text-shadow {
-            color: #fff !important;
-            text-shadow: 2px 2px 6px black, 3px 3px 2rem black, -3px -3px 2rem black !important;
-        }
-
         /*按鈕樣式*/
         .btn.btn-primary {
+            color: black !important;
+            padding: 6px 20px;
             font-size: 1rem;
-            letter-spacing: 10px;
+            letter-spacing: 1px;
             border: transparent !important;
             background: #fcd601 !important;
-            opacity: 0.8;
+            opacity: 1;
         }
 
         /*按鈕樣式-滑鼠掠過*/
         .btn.btn-primary:hover {
-            color: #fff !important;
+            color: white !important;
             background: #ffa500 !important;
             opacity: 1;
-        }
-
-        /*註冊登入區標題顏色*/
-        h2 {
-            color: black !important;
-        }
-
-        /*註冊區的overlay遮罩魔改成垂直分隔線*/
-        .overlay {
-            /*background: transparent !important;*/
-            border-left: 1px solid grey;
-            height: 300px;
-            margin-block: auto;
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            width: 100%;
-            opacity: 1;
-        }
-
-        @media (min-width: 992px) {
-            .overlay {
-                width: 50%;
-            }
         }
 
         /*註冊登入區輸入框、按鈕、下拉選單字體加大、邊角圓弧加大*/
         .form-group input,
         .form-group button,
         .form-group select {
-            font-size: 20px;
+            font-size: 20px !important;
             border-radius: 0.5rem;
         }
 
@@ -93,6 +58,31 @@
             min-width: 13%;
             border-top-left-radius: 0.5rem !important;
             border-bottom-left-radius: 0.5em !important;
+        }
+
+        /*區塊標題樣式*/
+        h2 {
+            color: black !important;
+            font-weight: bolder !important;
+        }
+
+        /*垂直分隔線*/
+        .overlay {
+            border-left: 1px solid grey;
+            height: 300px;
+            margin-block: auto;
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+            opacity: 1;
+        }
+
+        @media (min-width: 992px) {
+            .overlay {
+                width: 50%;
+            }
         }
     </style>
 </head>
@@ -340,7 +330,7 @@
 <script src="js/main.js"></script>
 <script>
     <!-- 讀取頁首及頁腳 -->
-    $("#header-page").load("/header", function (){
+    $("#header-page").load("/header", function () {
         // 取消非同步執行 讀取完 header 後再取得 title 名稱放入迷你導覽列
         $("#page-title").text($("title")[0].innerText);
     });
