走失協尋-版面調整

--- a/src/main/resources/templates/personal_shelter.html
+++ b/src/main/resources/templates/personal_shelter.html
@@ -49,8 +49,10 @@
 
         /*顯示物件-滑鼠掠過顏色*/
         .published:hover .text, .published:focus .text {
-            background: #81a5ff !important;
             color: rgba(255, 255, 255, 0.8);
+            background: #ff07004a !important;
+            /*轉場-淡入淡出效果*/
+            transition: background-color 0.35s ease-in-out !important;
         }
 
         .page_show {
