--- a/src/main/resources/templates/public_shelter.html
+++ b/src/main/resources/templates/public_shelter.html
@@ -3,7 +3,7 @@
 <head>
 
     <script src="js/split.page.js"></script>
-    <title>公立領養 -寵物資訊平台</title>
+    <title>收容所認養</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/font-awesome.min.css">
